--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
-  "name": "janus-video-room",
-  "version": "1.0.0",
+  "name": "@jaythegeek/janus-video-room",
+  "version": "1.0.2",
   "description": "A vue component for connecting to Janus",
   "main": "dist/index.js",
   "scripts": {
@@ -13,6 +13,9 @@
     "prod": "npm run production",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
+  "files": [
+    "dist/*"
+  ],
   "author": "jaythegeek",
   "license": "MIT",
   "dependencies": {
