--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": false,
   "name": "@jaythegeek/janus-video-room",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A vue component for connecting to Janus",
   "main": "dist/index.js",
   "scripts": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "cross-env": "^7.0.2",
     "laravel-mix": "^5.0.7",
+    "tailwindcss": "^1.9.5",
     "webrtc-adapter": "^7.7.0"
   },
   "devDependencies": {
