--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "webrtc-adapter": "^7.7.0"
   },
   "devDependencies": {
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^8.0.2",
+    "tailwindcss": "^1.9.5",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
