--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "private": false,
-  "name": "@jaythegeek/janus-video-room",
-  "version": "1.0.18",
-  "description": "A vue component for connecting to Janus",
-  "main": "dist/index.js",
-  "scripts": {
-    "serve": "vue serve src/JanusVideoRoom.vue",
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "npm run development -- --watch",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "deploy": "npm run production && npm publish"
-  },
-  "files": [
-    "dist/*"
-  ],
-  "author": "jaythegeek",
-  "license": "MIT",
-  "dependencies": {
-    "axios": "^0.20.0",
-    "cross-env": "^7.0.2",
-    "laravel-mix": "^5.0.7",
-    "webrtc-adapter": "^7.7.0"
-  },
-  "devDependencies": {
-    "resolve-url-loader": "^3.1.0",
-    "sass": "^1.27.0",
-    "sass-loader": "^8.0.2",
-    "tailwindcss": "^1.9.5",
-    "vue-template-compiler": "^2.6.12"
-  },
-  "eslintConfig": {
-    "rules": {
-      "no-unused-vars": "off",
-      "no-undef": "off",
-      "no-redeclare": "off"
+    "private": false,
+    "name": "@jaythegeek/janus-video-room",
+    "version": "1.0.19",
+    "description": "A vue component for connecting to Janus",
+    "main": "dist/index.js",
+    "scripts": {
+        "serve": "vue serve src/JanusVideoRoom.vue",
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "deploy": "npm run production && npm publish"
+    },
+    "files": [
+        "dist/*"
+    ],
+    "author": "jaythegeek",
+    "license": "MIT",
+    "dependencies": {
+        "@fortawesome/fontawesome-pro": "^5.15.2",
+        "axios": "^0.20.0",
+        "cross-env": "^7.0.2",
+        "laravel-mix": "^5.0.7",
+        "webrtc-adapter": "^7.7.0"
+    },
+    "devDependencies": {
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "^1.9.5",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "eslintConfig": {
+        "rules": {
+            "no-unused-vars": "off",
+            "no-undef": "off",
+            "no-redeclare": "off"
+        }
     }
-  }
 }
